<resources>

    <string name="app_name">Note Simple</string>
    <string name="menu_settings">Settings</string>
    <string name="new_note">New</string>
    <string name="note_list_label">List</string>
    <string name="delete">Delete</string>
    <string name="note_text">note text</string>
    <string name="note_title">note title</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="confirm_delete">Delete current note?</string>
    <string name="new_note_prompt">Create New Note</string>
    <string name="title_activity_note">Note Simple</string>
    <string name="title_activity_new_note_dialog">New Note</string>
    <string name="title_activity_note_list_view">Notes!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_note_view">Note Simple</string>
    <string name="drag_icon">Touch here to edit item position</string>
    <string name="note_name_filler">&lt;Note Name></string>

</resources>