<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical" >

    <requestFocus />

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/note_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.08"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/note_text"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/note_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="noteListButtonClick"
            android:text="@string/note_list_label" />

        <Button
            android:id="@+id/delete_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteButtonClick"
            android:text="@string/delete" />

        <Button
            android:id="@+id/new_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newButtonClick"
            android:text="@string/new_note" />

    </LinearLayout>

</LinearLayout>